[tool.poetry]
name = "intern-carfusion"
version = "0.1.0"
description = ""
authors = ["fabianmax <fabian.mueller@statworx.com>"]
readme = "README.md"
packages = [{include = "intern_carfusion"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
